# Nexus-Modeling

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  VERSION_MATRIX.md  docker-compose.yml  e2e-test.sh  smoke-test.sh
apps/Nexus-Agents/: AGENTS.md  README.md  pyproject.toml
apps/Nexus-Agents/src/: main.py  server.ts
apps/Nexus-Agents/tests/: server.test.ts
apps/Nexus-Database/crates/database-core/: Cargo.toml
apps/Nexus-Database/crates/database-core/src/: config.rs  error.rs  lib.rs  models.rs  pool.rs
apps/Nexus-Email/: pyproject.toml
apps/Nexus-Email/src/: main.py
apps/Nexus-PDF/: pyproject.toml
apps/Nexus-PDF/src/: main.py
apps/Nexus-Photos/backend/: pyproject.toml
apps/Nexus-Photos/backend/app/: ai_worker.py  celery_app.py  config.py  main.py  models.py  tasks.py
apps/Nexus-Photos/backend/app/routes/: ai.py  assets.py  photos.py
apps/Nexus-Security/: Cargo.toml
apps/Nexus-Security/src/: main.rs
docs/: README.md  (+76 more)
src/kernel/: CMakeLists.txt
src/kernel/include/nexus/: Kernel.h
src/kernel/include/nexus/animation/: AnimationSerialization.h
src/kernel/include/nexus/asset/: AssetDependencyGraph.h  SceneAsset.h  SceneAssetImporter.h  SceneAssetTextAdapter.h
src/kernel/include/nexus/automation/: AnimationExtension.h  AnimationSerializationExtension.h  AssetExtension.h  AssetGraphExtension.h  AutomationScript.h  EvalExtension.h  EvalNodesExtension.h  ExpressionNodeExtension.h  FrameCaptureExtension.h  FrameSchedulerExtension.h  GeometryExtension.h  GeometryKernelExtension.h  GfxDeviceExtension.h  GfxPlannerExtension.h  NeuralExtension.h  NodeSceneExtension.h  ParametricExtension.h  ParametricSamplesExtension.h  RemeshExtension.h  RenderExtension.h  RendererExtension.h  SceneGraphExtension.h  ScriptExpressionExtension.h  SculptExtension.h  SimCouplingExtension.h  SimExtension.h  SoftrastExtension.h  StrokeHistoryExtension.h  SubgraphExtension.h
src/kernel/include/nexus/eval/: AnimationNodes.h  EvalGraph.h  ExpressionNode.h  ExpressionNodeSerializer.h  GeometryNodes.h
src/kernel/include/nexus/eval_ext/: Subgraph.h  SubgraphRegistry.h  (+1 more)
src/kernel/src/animation/: AnimationCore.cpp  AnimationSerialization.cpp
src/kernel/src/asset/: AssetDependencyGraph.cpp  SceneAsset.cpp  SceneAssetImporter.cpp
src/kernel/src/automation/: AnimationExtension.cpp  AnimationSerializationExtension.cpp  AssetExtension.cpp  AssetGraphExtension.cpp  AutomationScript.cpp  EvalExtension.cpp  EvalNodesExtension.cpp  ExpressionNodeExtension.cpp  FrameCaptureExtension.cpp  FrameSchedulerExtension.cpp  GeometryExtension.cpp  GeometryKernelExtension.cpp  GfxDeviceExtension.cpp  GfxPlannerExtension.cpp  NeuralExtension.cpp  NodeSceneExtension.cpp  ParametricExtension.cpp  ParametricSamplesExtension.cpp  RemeshExtension.cpp  RenderExtension.cpp  RendererExtension.cpp  SceneGraphExtension.cpp  ScriptExpressionExtension.cpp  SculptExtension.cpp  SimCouplingExtension.cpp  SimExtension.cpp  SoftrastExtension.cpp  StrokeHistoryExtension.cpp  SubgraphExtension.cpp
src/kernel/src/eval/: AnimationNodes.cpp  EvalGraph.cpp  ExpressionNode.cpp  ExpressionNodeSerializer.cpp  GeometryNodes.cpp
src/kernel/src/eval_ext/: Subgraph.cpp  SubgraphRegistry.cpp  SubgraphSerialization.cpp
src/kernel/src/geometry/: BevelChamfer.cpp  BooleanOperation.cpp  ConstrainedDelaunay2D.cpp  Delaunay2D.cpp  ExtrudeOperation.cpp  GeometryKernel.cpp  HalfEdgeMesh.cpp  HardSurfaceWorkflow.cpp  InsetFacesOperation.cpp  MeshDecimator.cpp  MeshRepair.cpp  MeshTopologyAnalysis.cpp  Meshlet.cpp  ModelingShell.cpp  NurbsCurve.cpp  NurbsSurface.cpp  RailLoft.cpp  RobustPredicates.cpp  SubdivisionSurface.cpp  SurfaceCurveIntersect.cpp  SurfaceTrim.cpp  SweepLoft.cpp  TrimBoolean.cpp  Voronoi2D.cpp
src/kernel/src/gfx/: RenderContext.cpp
src/kernel/src/neural/: DLSSPlugin.cpp  DLSSPlugin.h  FSR3Plugin.cpp  FSR3Plugin.h  FSR4Plugin.cpp  FSR4Plugin.h  NeuralRenderer.cpp  OIDNDenoiser.cpp  XeSSPlugin.cpp  XeSSPlugin.h
src/kernel/src/parametric/: ConstraintGraph.cpp  ParametricSolver.cpp
src/kernel/src/render/: Camera.cpp  DescriptorBinder.cpp  FrameTimingLayer.cpp  GaussianSplatPass.cpp  Renderer.cpp  SceneGraph.cpp  ShadowMapTarget.cpp
src/kernel/src/scene/: NodeScene.cpp  NodeSceneSerializer.cpp
src/kernel/src/script/: Expression.cpp
src/kernel/src/sculpt/: Brush.cpp  SculptSession.cpp  StrokeHistorySerialization.cpp
src/kernel/src/sim/: ClothSolver.cpp  FluidSolver.cpp  SimCouplingHarness.cpp  SimulationCore.cpp
src/kernel/src/softrast/: ImageWriter.h  PixelBuffer.h  SoftwareRasterizer.cpp  SoftwareRasterizer.h  Texture2D.h
src/tooling/: CMakeLists.txt
src/tooling/src/: main.cpp
src/tooling/src/editor/: EditorSeams.cpp  EditorSeams.h
tests/: CMakeLists.txt
tests/kernel/: perf_smoke.cpp  test_AnimationCore.cpp  test_AnimationExtension.cpp  test_AnimationSerialization.cpp  test_AnimationSerializationExtension.cpp  test_AssetDependencyGraph.cpp  test_AssetExtension.cpp  test_AssetGraphExtension.cpp  test_AtmosphericScattering.cpp  test_AutoExposure.cpp  test_AutoWhiteBalance.cpp  test_AutomationScript.cpp  test_BDPT.cpp  test_BloomPostProcess.cpp  test_BooleanOperation.cpp  test_CameraExtended.cpp  test_CameraLensEffects.cpp  test_CapabilityDashboardContracts.cpp  test_CascadedVSMBlending.cpp  test_ClothSolver.cpp  test_ClusteredLighting.cpp  test_ConstrainedDelaunay2D.cpp  test_ConstraintDOF.cpp  test_ConstraintPropagation.cpp  test_ContactShadows.cpp  test_DLSSRayReconstruction.cpp  test_DecalRendering.cpp  test_DeformableSurface.cpp  test_Delaunay2D.cpp  test_DepthOfField.cpp  test_DescriptorBinder.cpp  test_DynamicNeRF.cpp  test_EvalExtension.cpp  test_EvalGraph.cpp  test_EvalNodesExtension.cpp  test_Expression.cpp  test_ExpressionNode.cpp  test_ExpressionNodeExtension.cpp  test_ExpressionNodeSerializer.cpp  test_ExtrudeOperation.cpp  (+129 more)
tests/kernel/fixtures/: api_surface_manifest_alpha_v1.txt
tests/kernel/fixtures/softrast/: .gitignore  box_flat.ppm  box_wireframe.ppm  triangle_flat.ppm
tools/viewer/: CMakeLists.txt  nexus_viewer.cpp
(+1382 files in other folders)
