[project]
name = "nexus-agents"
version = "0.1.0"
description = "Multi-agent system builder and orchestrator for agentic AI workflows"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "pydantic>=2.10"]
[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.14"]
[tool.ruff]
target-version = "py312"
[tool.ruff.format]
quote-style = "double"
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
[tool.mypy]
strict = true
