[project]
name = "nexus-email"
version = "0.1.0"
description = "Private sovereign email server with AI filtering, calendar integration, and federation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiohttp>=3.10",
    "pydantic>=2.10",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.14",
]
[tool.ruff]
target-version = "py312"
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
[tool.mypy]
strict = true
python_version = "3.12"
