[package]
name = "database-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
deadpool-postgres = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
envy = "0.4"
